--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framework7": "^6.0.10",
     "framework7-react": "^6.0.10",
     "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
